# migrate-ckpt

./: LICENSE  README.md  pyproject.toml
.github/workflows/: quality.yml  tests.yml
migrate_ckpt/: __init__.py  migrate.py
tests/: test_migration.py  test_migration_from_file.py
tests/migrations/: 0_first_migration.py  1_second_migration.py
